--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1,6 +1,7 @@
 body {
     background: url('../../main/images/birds.png');
-    background-size: 100% 100%; 
+    background-size: 100% auto; 
+    overflow-y: hidden;
 }
 
 .container {
@@ -13,7 +14,7 @@ body {
     /* padding: 0 30px; */
     max-height: 60px;
     background: white;
-    width: 65%;
+    width: 50%;
 }
 
 #search-div i {
@@ -46,31 +47,32 @@ body {
 
 #dem{
     position: relative;
-    height: 60%;
-    width: 60%;
-    margin: auto;
+    height: 50%;
+    width: 50%;
+    margin: 100px auto;
     bottom: 100px;
-    top: 1px;
-
 }
 
 #confetti{
     position: relative;
+    height: 60%;
+    width: 60%;
     margin: auto;
-    bottom: 450px;
-}
-
-#load{
-    margin: auto;
-    position: relative;
-    bottom: 200px;
+    bottom: 500px;
 }
 
 #rep{
     position: relative;
+    height: 50%;
+    width: 50%;
+    margin: 100px auto;
+    bottom: 100px;
+}
+
+#confetti-2{
+    position: relative;
     height: 60%;
     width: 60%;
     margin: auto;
-    bottom: 100px;
-    top: 1px;
+    bottom: 500px;
 }
