--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -6,6 +6,7 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/style.css' %}" />
   </head>
+
   <body>
     <nav>
       <div class="nav-wrapper pink accent-3">
@@ -14,6 +15,7 @@
         </ul>
       </div>  
     </nav>
+
     <div class="row z-depth-5" id="search-div">
       <form id="get_handle" method="POST" action="/test/"> 
         <div class="left col s10">
@@ -24,14 +26,26 @@
         </div>
       </form>
     </div>
-    <p id="dem"></p>
-    <div id="confetti"></div>
-    <div id="rep"></div>
-    <div id="confetti-2"></div>
+
+    <div id="result"  class="row">
+      <div id="dem"></div>
+      <div id="confetti"></div>
+      <div id="rep"></div>
+      <div id="confetti-2"></div>
+    </div>
+    
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
       $(document).ready(function() {
         console.log('Initital')
+        $('#rep').hide();
+        $('#dem').hide();
+        $('#confetti').hide();
+        $('#confetti-2').hide();
+      });
+
+      $('#handle').focus(function(e) {
         $('#rep').hide();
         $('#dem').hide();
         $('#confetti').hide();
@@ -45,29 +59,39 @@
         /* $.get('/test/',
             {'handle': handle},   
         ); */
-      $.ajax({
-        type: "get",
-        url: 'test',
-        datatype:'jsonp',
-        data: {
-         'handle': handle,
-         },
-      }).done(function(data) {
-        console.log(data)
-        if (data.party == 0) {
-          console.log('Democrat');
-          $('#rep').hide();
-          $('#confetti-2').hide();
-          $('#dem').show();
-          $('#confetti').show();
-        } else if (data.party == 1) {
-          console.log('Republican');
-          $('#dem').hide();
-          $('#confetti').hide();
-          $('#rep').show();
-          $('#confetti-2').show();
-        } else {
-          alert('Handle does not exist. Please enter another handle.')
+        $.ajax({
+          type: "get",
+          url: 'test',
+          datatype:'jsonp',
+          data: {
+          'handle': handle,
+          },
+        }).done(function(data) {
+          console.log(data)
+          if (data.party == 0) {
+            console.log('Democrat');
+            $('#rep').hide();
+            $('#confetti-2').hide();
+            $('#dem').show();
+            $('#confetti').show();
+          } else if (data.party == 1) {
+            console.log('Republican');
+            $('#dem').hide();
+            $('#confetti').hide();
+            $('#rep').show();
+            $('#confetti-2').show();
+          } else {
+            $('#rep').hide();
+            $('#dem').hide();
+            $('#confetti').hide();
+            $('#confetti-2').hide();
+            if (data.msg == -1) {
+              alert('Handle does not exist. Please enter another handle.')
+            } else if (data.msg == -2) {
+              alert('Tweets are protected. They cannot be accessed.')
+            } else if (data.msg == -3) {
+              alert('This handle does not have enough tweets to make a prediction. Please enter another handle.')
+            }
           }
         })
       }); 
