--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -1,4 +1,5 @@
 <html>
+  
   <head>
     <title>Windsock</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -13,11 +14,24 @@
         <a href="#" class="brand-logo center ">Windsock</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
         </ul>
-      </div>
+      </div>  
     </nav>
 
-    <div class="row z-depth-5" id="search-div">
-      <form id="get_handle" method="POST" action="/test/">
+    {% block content %}
+    {% endblock %}
+
+  </body>
+
+</html>
+
+
+
+
+
+
+
+    <!-- <div class="row z-depth-5" id="search-div">
+      <form id="get_handle" method="POST" action="/test/"> 
         <div class="left col s10">
           <input type="text" id="handle" placeholder="Enter twitter handle of user" />
         </div>
@@ -25,16 +39,17 @@
           <input type="submit" class="large material-icons" value="search"/>
         </div>
       </form>
-    </div>
+    </div> -->
 
-    <div id="result"  class="row">
+    <!-- <div id="result"  class="row">
+      <div id="load"></div>
       <div id="dem"></div>
       <div id="confetti"></div>
       <div id="rep"></div>
       <div id="confetti-2"></div>
     </div>
-
-
+    
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
       $(document).ready(function() {
@@ -44,6 +59,7 @@
         $('#confetti').hide();
         $('#confetti-2').hide();
       });
+
       $('#handle').focus(function(e) {
         $('#rep').hide();
         $('#dem').hide();
@@ -56,7 +72,7 @@
         e.preventDefault();
         var handle = $(this).find('input').val();
         /* $.get('/test/',
-            {'handle': handle},
+            {'handle': handle},   
         ); */
         $.ajax({
           type: "get",
@@ -93,36 +109,7 @@
             }
           }
         })
-      });
-    </script>
-    <h1 id="party"></h1>
-    <h1 id="keywords"></h1>
-    <h1 id="pos"></h1>
-    <h1 id="neg"></h1>
-    <h1 id="total_pos"></h1>
-    <h1 id="total_neg"></h1>
-    <h1 id="hashtags"></h1>
-    <h1 id="hashcounts"></h1>
-    <script type="text/javascript">
-
-    $(document).on('submit','#handles',function(e){
-
-      e.preventDefault();
-      var handle = $(this).find('input').val();
-      $.get('/direction/',
-            {'handle': handle},
-            function(response){ $('#party').text(response.party);
-                                $('#keywords').text(response.keywords);
-                                $('#pos').text(response.key_pos);
-                                $('#neg').text(response.key_neg);
-                                $('#total_pos').text(response.total_pos);
-                                $('#total_neg').text(response.total_neg);
-                                $('#hashtags').text(response.hashtags);
-                                $('#hashcounts').text(response.hashtag_count);
-      });
-    });
-
-
+      }); 
     </script>
     <script type="text/javascript" src="{% static 'main/js/repo.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/animations/rep.json' %}"></script>
@@ -132,8 +119,11 @@
     <script type="text/javascript" src="{% static 'main/js/animations-demo.js' %}"></script>
     <script type="text/javascript" src="{% static 'main/animations/7434-confetti.json' %}"></script>
     <script type="text/javascript" src="{% static 'main/js/confetti.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
   <!-- <script type="text/javascript" src="{% static 'main/animations/295-refresh.json' %}"></script> -->
   <!-- <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.4/lottie.min.js'></script>-->
-</html>
+    
+  
+        
+  
+  
