--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,44 +6,129 @@
 
   <div class="container">
     <div class="row z-depth-5" id="search-div">
-      <form id="handles">
       <div class="left col s10">
-        <input type="text" placeholder="Enter twitter handle of user" id="handle"/>
+        <input type="text" id="handle" placeholder="Enter twitter handle of user" />
       </div>
       <div class="right col s2">
-          <input type="submit" class="material-icons" value="search"/>
+        <a href="" id="get_handle">
+          <i class="material-icons">search</i>
+        </a>
       </div>
-</form>
-<h1 id="party"></h1>
-<h1 id="keywords"></h1>
-<h1 id="pos"></h1>
-<h1 id="neg"></h1>
-<h1 id="total_pos"></h1>
-<h1 id="total_neg"></h1>
-<h1 id="hashtags"></h1>
-<h1 id="hashcounts"></h1>
     </div>
+
+    <div id="alerts" class="row">
+      <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <span id="error-message"></span>
+      </div>
+    </div>
+
+    <div id="result"  class="row">
+      <div id="load"></div>
+      <div id="dem"></div>
+      <div id="confetti"></div>
+      <div id="rep"></div>
+      <div id="confetti-2"></div>
+    </div>
+
+    <div id="stats" class="row">
+
+    </div>
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        console.log('Initital');
+        $('#load').hide();
+        $('#rep').hide();
+        $('#dem').hide();
+        $('#confetti').hide();
+        $('#confetti-2').hide();
+        $('#alerts').hide();
+
+      });
+
+      $('#handle').focus(function(e) {
+        $('#load').hide();
+        $('#rep').hide();
+        $('#dem').hide();
+        $('#confetti').hide();
+        $('#confetti-2').hide();
+        $('#alerts').hide();
+
+      });
+    </script>
+    <script>
+      $('#get_handle').on('click',function(e){
+        e.preventDefault();
+        var handle = $('#handle').val();
+        $('#load').show();
+        $.ajax({
+          type: "get",
+          url: 'test',
+          datatype:'jsonp',
+          data: {
+          'handle': handle,
+          },
+        }).done(function(data) {
+          console.log(data);
+          $('#load').hide();
+          $('#alerts').hide();
+
+          if (data.party == 0) { //If the result is Democrat
+
+            console.log('Democrat');
+            $('#rep').hide();
+            $('#confetti-2').hide();
+            $('#dem').show();
+            $('#confetti').show();
+
+          } else if (data.party == 1) { //If the result is Republican
+            console.log('Republican');
+            $('#dem').hide();
+            $('#confetti').hide();
+            $('#rep').show();
+            $('#confetti-2').show();
+
+          } else { //Error handling
+            $('#rep').hide();
+            $('#dem').hide();
+            $('#confetti').hide();
+            $('#confetti-2').hide();
+            $('#alerts').show();
+
+            if (data.msg == -1) {
+              $('#error-message').text('Handle does not exist. Please enter another handle.');
+
+            } else if (data.msg == -2) {
+              $('#error-message').text('Tweets are protected. They cannot be accessed.');
+
+            } else if (data.msg == -3) {
+              $('#error-message').text('This handle does not have enough tweets to make a prediction. Please enter another handle.');
+
+            } else {
+              $('#error-message').text("Unknown error! Please try again later.");
+
+            }
+          }
+        })
+      }); 
+    </script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.7/lottie.js"></script>
+    <script type="text/javascript" src="{% static 'main/js/loading.js' %}"></script>
+    <script type="text/javascript" src="{% static 'main/js/repo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'main/animations/rep.json' %}"></script>
+    <script type="text/javascript" src="{% static 'main/js/animations-repo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'main/js/demo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'main/animations/DEMOCRAT.json' %}"></script>
+    <script type="text/javascript" src="{% static 'main/js/animations-demo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'main/animations/7434-confetti.json' %}"></script>
+    <script type="text/javascript" src="{% static 'main/js/confetti.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script type="text/javascript">
 
-  $(document).on('submit','#handles',function(e){
-
-    e.preventDefault();
-    var handle = $(this).find('input').val();
-    $.get('/direction/',
-          {'handle': handle},
-          function(response){ $('#party').text(response.party);
-                              $('#keywords').text(response.keywords);
-                              $('#pos').text(response.key_pos);
-                              $('#neg').text(response.key_neg);
-                              $('#total_pos').text(response.total_pos);
-                              $('#total_neg').text(response.total_neg);
-                              $('#hashtags').text(response.hashtags);
-                              $('#hashcounts').text(response.hashtag_count);
-    });
-  });
-
-
-  </script>
 {% endblock %}
