--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1,26 +1,32 @@
 body {
     background: url('../../main/images/birds.png');
     background-size: 100% auto; 
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .container {
     margin-top: 50px;
+    width: 58% !important;
+    overflow: auto;
 }
 
+
 #search-div {
-    /* border: 1px solid black; */
     border-radius: 30px;
-    /* padding: 0 30px; */
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
     max-height: 60px;
     background: white;
-    width: 50%;
+    width: 70%;
+    -webkit-box-shadow: rgba(0,0,0,0.8) 0px 0 10px;
+    -moz-box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+    box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+    margin-top: 10px;
 }
 
 #search-div i {
     font-size: 55px;
     display: inline-block;
-    /* border: 1px solid red; */
     margin-bottom: 10px;
     color: white;
 
@@ -92,8 +98,39 @@ body {
     line-height: 20px;
     cursor: pointer;
     transition: 0.3s;
-  }
+}
   
 .closebtn:hover {
     color: black;
-  }
+}
+
+#result {
+    /* Set a specific height */
+    /* min-height: 500px;  */
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 98% !important;
+    margin: auto;
+    max-height: 400px !important;
+    /* border: 1px solid green; */
+}
+
+.stats {
+	height:1000px;
+    background-color: #424040;
+    font-size:36px;
+    width: 98% !important;
+  	margin: auto;
+}
+
+#stats canvas {
+    margin: auto !important;
+}
+
+.hidden {
+   display: none
+}
