--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -84,7 +84,7 @@
           'handle': handle,
           },
         }).done(function(response) {
-          console.log(response);
+//           console.log(response);
           $('#load').hide();
           $('#alerts').hide();
           $('#stats').hide();
