--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,7 +4,7 @@
   {% load staticfiles %}
 
 
-  <div class="container">
+  <div id="maincont" class="container">
     <div class="row" id="search-div">
       <div class="left col s10">
         <input type="text" id="handle" placeholder="Enter twitter handle of user" />
@@ -15,6 +15,8 @@
         </a>
       </div>
     </div>
+  </div>
+    <!-- <h1 id="HELLO">HELOO</h1> -->
 
     <div id="alerts" class="row hidden">
       <div class="alert">
@@ -32,10 +34,11 @@
     </div>
 
     <div id="stats" class="row hidden">
-      <h2 style="display: block; margin:auto; width:50%; text-align:center;">STATISTICS</h2>
+      <h2 id="stats-title" style="display: block; margin:auto; width:50%; text-align:center;">STATISTICS</h2>
       <canvas id="keywords_chart"></canvas><br>
       <canvas id="hashtag_chart"></canvas><br>
       <canvas id="polarity_chart"></canvas><br>
+
     </div>
 
 
@@ -43,7 +46,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.5.0"></script> -->
-    <script type="text/javascript" src="{% static 'main/js/stats.js' %}"></script> 
+    <script type="text/javascript" src="{% static 'main/js/stats.js' %}"></script>
     <script>
       $(document).ready(function() {
         console.log('Initital');
@@ -138,7 +141,7 @@
             }
           }
         })
-      }); 
+      });
     </script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.7/lottie.js"></script>
