--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -6,17 +6,18 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/style.css' %}" />
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
   </head>
 
   <body>
-    
+
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper pink accent-3">
           <a href="/" class="brand-logo center ">Tweetsock</a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
           </ul>
-        </div>  
+        </div>
       </nav>
     </div>
 
