--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -43,9 +43,10 @@ body {
     width: 100vh%;
   }
   body{
-    background: url('../../main/images/bluegrad.png');
+    background: url('../../main/images/Facebook Messenger.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-position: center;
   }
 #stats-title{
   font-size: 35px;
@@ -66,6 +67,16 @@ body {
   #search-div i{
     margin-left: -10px;
   }
+  /* #keywords_chart{
+    background-color: #1DA1F2;
+  }
+  #hashtag_chart{
+    background-color: #1DA1F2;
+  }
+  #polarity_chart{
+    background-color: #1DA1F2;
+  } */
+
 }
 
 
