--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -43,7 +43,7 @@ body {
     width: 100vh%;
   }
   body{
-    background: url('../../main/images/Facebook Messenger.jpg');
+    background: url('../../main/images/FacebookMessenger.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
