--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div id="stats" class="row hidden">
-      <h2 id="stats-title" style="display: block; margin:auto; width:50%; text-align:center;">STATISTICS</h2>
+      <h2 id="stats-title" style="line-height: 0.3; display: block; margin:auto; width:50%; text-align:center;">STATISTICS</h2>
       <canvas id="keywords_chart"></canvas><br>
       <canvas id="hashtag_chart"></canvas><br>
       <canvas id="polarity_chart"></canvas><br>
