--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -7,6 +7,8 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/style.css' %}" />
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -14,7 +16,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper pink accent-3">
-          <a href="/" class="brand-logo center ">Tweetsock</a>
+          <a style="font-family: 'Ubuntu', sans-serif;"  href="/" class="brand-logo center ">tweet<b>sock</b</a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
           </ul>
         </div>
