--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -16,7 +16,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper pink accent-3">
-          <a style="font-family: 'Ubuntu', sans-serif;"  href="/" class="brand-logo center ">tweet<b>sock</b</a>
+          <a style="font-family: 'Ubuntu', sans-serif;"  href="/" class="brand-logo center ">tweet<b>sock</b></a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
           </ul>
         </div>
